Disable non-Opt scrabble benchmark, comment on GC setup in build